Archive2/b1/3faded2a6d9dfe/output
main.cpp: In function 'int main()':
main.cpp:12:10: error: cannot convert 'int*' to 'long int*' for argument '1' to 'void bar(long int*)'
   bar(foo);
          ^
